--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 3.10)
 project(int)
-add_executable(int program.cpp)
+add_executable(int ./src/main.cpp ./src/util.cpp)
